# network_monarch

./: .gitignore  start.ps1
monarch_probe/: Cargo.toml  build.rs  ntrace_test.txt  test.rs  test_endian.rs  test_parse.rs  test_tcp_admin.bat  test_trace.json  启动雷达.bat
monarch_probe/src/: geoip.rs  main.rs  ndpi_ffi.rs  trace.rs
ndpi/: .gitignore  autogen.sh  configure.ac  libndpi-uninstalled.pc.in
ndpi/.github/workflows/: build-msbuild.yml  build-rpm.yml  build.yml  build_crosscompilation.yml  build_docker.yml  build_freebsd.yml  build_masan.yml  build_scheduled.yml  cifuzz.yml  codeql.yml
ndpi/doc/: configuration_parameters.rst
ndpi/example/: Makefile.in  ndpiReader.c  ndpiSimpleIntegration.c  protos_huge.txt  reader_util.c  reader_util.h
ndpi/fuzz/: Makefile.am  dictionary.dict  fuzz_alg_anomalymodel.cpp  fuzz_alg_crc32_md5.c  fuzz_alg_hw_rsi_outliers_da.cpp  fuzz_alg_isolationforest.cpp  fuzz_alg_memmem.cpp  fuzz_alg_ranking.cpp  fuzz_common_code.h  fuzz_config.cpp  fuzz_dga.c  fuzz_dns_parse.c  fuzz_ds_address_cache.cpp  fuzz_ds_bitmap.cpp  fuzz_ds_domain_classify.cpp  fuzz_ds_filter.cpp  fuzz_ds_hash.cpp  fuzz_filecfg_categories.c  fuzz_filecfg_category.c  fuzz_filecfg_config.c  fuzz_filecfg_malicious_ja4.c  fuzz_filecfg_protocols.c  fuzz_filecfg_risk_domains.c  fuzz_http_parse.c  fuzz_is_stun.c  fuzz_is_stun_tcp.c  fuzz_match_custom_category.c  fuzz_ndpi_reader_pl7m_64k.c  fuzz_process_packet.c  fuzz_quic_get_crypto_data.c  fuzz_readerutils_workflow.cpp  fuzz_tls_certificate.c  fuzz_tls_client_server_hello.c
ndpi/fuzz/corpus/: create_corpus_fuzz_match_custom_category.sh
ndpi/fuzz/corpus/fuzz_dns_parse/: dns_query  dns_query_any_tcp  dns_query_https  dns_query_opt  dns_resp  dns_resp_any_tcp_frag  dns_resp_https  dns_resp_opt
ndpi/fuzz/corpus/fuzz_filecfg_protocols/: custom_cat_1.txt  custom_cat_2.txt  custom_cat_3.txt  custom_cat_4.txt  custom_cat_5.txt  custom_cat_6.txt  custom_cat_7.txt  ja4.txt  ja4_2.txt  ndpi_fingerprint.txt  ndpi_fingerprint_2.txt  protos.txt  url.txt  url_2.txt  url_3.txt
ndpi/fuzz/corpus/fuzz_http_parse/: connect_resp  get_2  get_3  get_req  ocsp_get  ocsp_resp  origin_different_than_host  post  post_2  resp_301  resp_frag
ndpi/fuzz/corpus/fuzz_tls_client_server_hello/: ch_1.2  ch_1.2_sess_resumption_via_session_ticket  ch_1.3  ch_1.3_session_resumption  ch_dtls_1.0  ch_dtls_1.3  ch_ech  ch_pq  sh_1.2  sh_1.3  sh_dtls_1.0  sh_dtls_1.3  sh_hello_retry  sh_pq  sh_sh_cert_frags_at_record_layer
ndpi/influxdb/: Makefile.in
ndpi/rrdtool/: Makefile.in
ndpi/src/include/: ndpi_define.h.in  ndpi_includes.h  ndpi_private.h  ndpi_protocol_ids.h  ndpi_typedefs.h
ndpi/src/lib/: Makefile.in  ndpi_analyze.c  ndpi_bitmap.c  ndpi_cache.c  ndpi_config.c  ndpi_content_match.c.inc  ndpi_domains.c  ndpi_fingerprint.c  ndpi_hash.c  ndpi_main.c  ndpi_memory.c  ndpi_serializer.c  ndpi_utils.c
ndpi/src/lib/plugins/: Makefile.in
ndpi/src/lib/protocols/: activision.c  afp.c  ajp.c  alicloud.c  amazon_video.c  among_us.c  amqp.c  armagetron.c  atg.c  avast.c  avast_securedns.c  bacnet.c  beckhoff_ads.c  bfcp.c  bfd.c  bgp.c  bitcoin.c  bittorrent.c  bjnp.c  blizzard.c  btlib.c  c1222.c  can.c  capwap.c  cassandra.c  ceph.c  checkmk.c  cip.c  ciscovpn.c  citrix.c  cnp-ip.c  coap.c  cod_mobile.c  collectd.c  corba.c  cpha.c  crossfire.c  crynet.c  dcerpc.c  dhcp.c  (+218 more)
ndpi/tests/: Makefile.am  do-dga.sh.in  do-unit.sh.in  do.sh.in  ossfuzz.sh
ndpi/tests/cfgs/caches_cfg/result/: ookla.pcap.out  teams.pcap.out
ndpi/tests/cfgs/caches_global/result/: bittorrent.pcap.out  lru_ipv6_caches.pcapng.out  mining.pcapng.out
ndpi/tests/cfgs/classification_only/pcap/: waze.pcap
ndpi/tests/cfgs/classification_only/result/: bittorrent.pcap.out  bittorrent_tcp_miss.pcapng.out  forticlient.pcap.out  http-basic-auth.pcap.out  http-pwd.pcapng.out  http_auth.pcap.out  ookla.pcap.out  sip.pcap.out  teams.pcap.out  tls_1.2_unidir_client_no_cert.pcapng.out  tls_1.2_unidir_server_no_cert.pcapng.out  tls_1.2_unidirectional_client.pcapng.out  tls_1.2_unidirectional_server.pcapng.out  tls_1.3_unidirectional_client.pcapng.out  tls_1.3_unidirectional_server.pcapng.out  tls_ech.pcapng.out  tls_verylong_certificate.pcap.out  waze.pcap.out
ndpi/tests/cfgs/custom_rules/result/: custom_rules_overwrite_domains.pcap.out
ndpi/tests/cfgs/default/pcap/: apple_push.pcap  custom_categories.pcapng  gearup_booster.pcap  haproxyv2.pcapng  http_ipv6.pcap  icecast.pcapng  iris.pcapng  lagofast.pcap  libp2p.pcap  sbe.pcap  sites3.pcapng  slowdos.pcap  slowloris.pcap  tls_with_more_than_99_ciphers.pcapng
ndpi/tests/cfgs/default/result/: 1kxun.pcap.out  443-chrome.pcap.out  443-curl.pcap.out  443-firefox.pcap.out  443-git.pcap.out  443-opvn.pcap.out  443-safari.pcap.out  4in4tunnel.pcap.out  4in6tunnel.pcap.out  6in4tunnel.pcap.out  6in6tunnel.pcap.out  BGP_Cisco_hdlc_slarp.pcap.out  BGP_redist.pcap.out  EAQ.pcap.out  FAX-Call-t38-CA-TDM-SIP-FB-1.pcap.out  IEC104.pcap.out  KakaoTalk_chat.pcap.out  KakaoTalk_talk.pcap.out  NTPv2.pcap.out  NTPv3.pcap.out  NTPv4.pcap.out  Oscar.pcap.out  TivoDVR.pcap.out  WebattackRCE.pcap.out  WebattackSQLinj.pcap.out  WebattackXSS.pcap.out  activision.pcap.out  adult_content.pcap.out  afp.pcap.out  agora-sd-rtn.pcap.out  ah.pcapng.out  ajp.pcap.out  alexa-app.pcapng.out  alicloud.pcap.out  among_us.pcap.out  amqp.pcap.out  android.pcap.out  anyconnect-vpn.pcap.out  anydesk.pcapng.out  apple_push.pcap.out  (+564 more)
ndpi/tests/cfgs/disable_protocols/: config.txt
ndpi/tests/cfgs/flow_risk_list_disable/: config.txt
ndpi/tests/cfgs/hostname_dns_check/: config.txt
ndpi/tests/cfgs/huge_number_of_custom_protocols/: config.txt
ndpi/tests/cfgs/monitoring/: config.txt
ndpi/tests/cfgs/tls_analysis/: README.txt  config.txt
ndpi/tests/dga/: Makefile.in  dga_evaluate.c
ndpi/tests/performance/: Makefile.in  geo.c  patriciasearch.c  substringsearch.c
ndpi/tests/unit/: Makefile.in  unit.c
ndpi/utils/: cross-compile-test-s390x.sh  cross-compile-test.sh
ndpi/windows/: nDPI.vcxproj
ndpi/windows/src/: ndpi_define.h
ndpi/wireshark/: ndpi.lua
(+110 files in other folders)
